--- a/app/src/main/res/layout/activity_card_person.xml
+++ b/app/src/main/res/layout/activity_card_person.xml
@@ -1,4 +1,5 @@
-<com.google.android.material.card.MaterialCardView android:id="@+id/card_view2"
+<com.google.android.material.card.MaterialCardView
+    android:id="@+id/card_view2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -8,16 +9,18 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:background="@color/md_theme_primaryContainer">
 
-        <!-- Media -->
         <ImageView
             android:id="@+id/img_person"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             tools:srcCompat="@drawable/rahul" />
 
         <LinearLayout
@@ -26,15 +29,15 @@
             android:orientation="vertical"
             android:padding="8dp"
             app:layout_constraintTop_toBottomOf="@id/img_person"
-            android:background="@color/design_default_color_background">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <!-- Title, secondary and supporting text -->
             <TextView
                 android:id="@+id/tv_person_name"
+                style="@style/TextTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/person_name"
-                android:textAppearance="?attr/textAppearanceTitleMedium" />
+                android:text="@string/person_name"/>
 
             <TextView
                 android:id="@+id/tv_person_nick"
@@ -42,18 +45,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:text="@string/person_nick"
-                android:textColor="?android:attr/textColorSecondary"
-                android:textSize="14sp"
-                android:textStyle="italic" />
+                style="@style/TextDesc" />
 
             <TextView
-                android:id="@+id/tv_person_desc"
+                android:id="@+id/tv_person_desc_detail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                style="@style/TextContext"
                 android:layout_marginTop="8dp"
-                android:text="@string/person_desc"
-                android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary" />
+                android:text="@string/person_desc" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
