--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -48,5 +48,26 @@
         <item name="colorSurfaceContainerHighest">@color/md_theme_surfaceContainerHighest</item>
     </style>
 
+    <style name="TextTitle">
+        <item name="android:textColor">@color/md_theme_onPrimaryContainer</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/robotoslab</item>
+    </style>
+
+    <style name="TextDesc">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/md_theme_onPrimaryContainer</item>
+        <item name="fontFamily">@font/nunito</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
+    <style name="TextContext">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/md_theme_onPrimaryContainer</item>
+        <item name="fontFamily">@font/nunito</item>
+        <item name="android:justificationMode">inter_word</item>
+    </style>
+
     <style name="Theme.Biodata" parent="AppTheme" />
 </resources>
