--- a/app/src/main/res/layout/activity_card_person.xml
+++ b/app/src/main/res/layout/activity_card_person.xml
@@ -48,7 +48,7 @@
                 style="@style/TextDesc" />
 
             <TextView
-                android:id="@+id/tv_person_desc_detail"
+                android:id="@+id/tv_person_desc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/TextContext"
