add share on detail person

--- a/app/src/main/res/layout/activity_desc_person.xml
+++ b/app/src/main/res/layout/activity_desc_person.xml
@@ -102,17 +102,25 @@
             android:layout_margin="8dp"
             android:contentDescription="@string/social_media3"
             tools:srcCompat="@drawable/tiktok" />
+
+            <ImageView
+                android:id="@+id/action_share"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_margin="8dp"
+                tools:srcCompat="@drawable/share" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_detail_person"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/TextContext"
-        android:textSize="18sp"
-        android:layout_margin="8dp"
-        app:layout_constraintTop_toBottomOf="@id/ll_socialmedia"
-        android:text="@string/detail_text"
-        android:fontFamily="@font/nunito"/>
+
+        <TextView
+            android:id="@+id/tv_detail_person"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            style="@style/TextContext"
+            android:textSize="18sp"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toBottomOf="@id/ll_socialmedia"
+            android:text="@string/detail_text"
+            android:fontFamily="@font/nunito"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
